SERVER-19711 detect invalid wrapped queries in ServerSelectionMetadata upconversion